--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activity_bgcolor"
         tools:context=".MainActivity"
         tools:ignore="ContentDescription, Autofill"
         >
@@ -29,7 +28,6 @@
             android:layout_height="20dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="@string/flag_greek"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/flag_gr_small"
@@ -40,7 +38,6 @@
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:contentDescription="@string/flag_dutch"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/flag_nl_small"
@@ -56,12 +53,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
     <ImageButton
-            android:id="@+id/btn_OpenDeck"
+            android:id="@+id/btn_open_deck"
             style="@android:style/Widget.ImageButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
-            android:contentDescription="@string/open_flashcards"
             android:scaleType="centerCrop"
             android:src="@drawable/flash"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +70,6 @@
             style="@android:style/Widget.ImageButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:contentDescription="@string/luister_oefening"
             android:scaleType="fitCenter"
             android:src="@drawable/listen"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,13 +82,12 @@
             style="@android:style/Widget.ImageButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:contentDescription="@string/werkwoordjes_oefenen"
             android:scaleType="centerCrop"
-            android:src="@drawable/werkinuitvoering"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/wiu"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.67"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <ImageButton
             android:id="@+id/btn_hangman"
@@ -101,7 +95,6 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="8dp"
-            android:contentDescription="@string/play_hangman"
             android:scaleType="centerCrop"
             android:src="@drawable/galgje"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,12 +107,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
-            android:background="@android:color/white"
+            android:background="?android:attr/windowBackground"
             android:scrollbars="none"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/text_search"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintVertical_bias="1.0"
             tools:listitem="@layout/lemma_recycler_item"
             />
     <ProgressBar
@@ -138,7 +133,7 @@
             android:layout_height="wrap_content"
             android:labelFor="@id/text_search"
             android:text="@string/caption_search"
-            app:layout_constraintBottom_toTopOf="@+id/btn_OpenDeck"
+            app:layout_constraintBottom_toTopOf="@+id/btn_open_deck"
             app:layout_constraintEnd_toStartOf="@+id/text_search"
             app:layout_constraintTop_toBottomOf="@+id/recycler_view"
             />
@@ -153,9 +148,9 @@
             android:gravity="start|top"
             android:inputType="text"
             android:singleLine="true"
-            app:layout_constraintBottom_toTopOf="@+id/btn_OpenDeck"
+            app:layout_constraintBottom_toTopOf="@+id/btn_open_deck"
             app:layout_constraintEnd_toStartOf="@+id/btn_hangman"
-            app:layout_constraintStart_toEndOf="@+id/btn_OpenDeck"
+            app:layout_constraintStart_toEndOf="@+id/btn_open_deck"
             />
     <ImageButton
             android:id="@+id/btn_clear"
