--- a/app/src/main/res/layout/greek_alphabet.xml
+++ b/app/src/main/res/layout/greek_alphabet.xml
@@ -2,7 +2,6 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,277 +10,302 @@
         >
 
     <Button
-            android:text="α"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="α"
+            android:text="α"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
-            android:onClick="onGreekLetter"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             />
     <Button
-            android:text="β"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="β"
+            android:text="β"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="γ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="γ"
+            android:text="γ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="δ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="δ"
+            android:text="δ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ε"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ε"
+            android:text="ε"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ζ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ζ"
+            android:text="ζ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="η"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="η"
+            android:text="η"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="θ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="θ"
+            android:text="θ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
 
-            android:onClick="onGreekLetter"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             />
     <Button
-            android:text="ι"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ι"
+            android:text="ι"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="κ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="κ"
+            android:text="κ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="λ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="λ"
+            android:text="λ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="μ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="μ"
+            android:text="μ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ν"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ν"
+            android:text="ν"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ξ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ξ"
+            android:text="ξ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ο"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ο"
+            android:text="ο"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="π"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="π"
+            android:text="π"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ρ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ρ"
+            android:text="ρ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="σ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="σ"
+            android:text="σ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="τ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="τ"
+            android:text="τ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="υ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="υ"
+            android:text="υ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="φ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="φ"
+            android:text="φ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="χ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="χ"
+            android:text="χ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ψ"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ψ"
+            android:text="ψ"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text="ω"
+            android:layout_width="@dimen/greek_button_width"
+            android:layout_height="@dimen/greek_button_height"
+            android:fontFamily="@font/tinos_italic"
+            android:onClick="onGreekLetter"
             android:tag="ω"
+            android:text="ω"
             android:textAllCaps="false"
-            android:layout_width="@dimen/greek_button_width"
-            android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
             tools:ignore="ButtonStyle,HardcodedText"
-            android:onClick="onGreekLetter"
             />
     <Button
-            android:text=" "
-            android:tag="_"
-            android:textAllCaps="false"
             android:layout_width="@dimen/greek_button_width"
             android:layout_height="@dimen/greek_button_height"
-            android:textSize="20sp"
-            android:textColor="@color/border_color"
-            tools:ignore="ButtonStyle,HardcodedText"
+            android:fontFamily="@font/tinos_italic"
             android:onClick="onGreekLetter"
+            android:tag="_"
+            android:text=" "
+            android:textAllCaps="false"
+            android:textColor="@color/blue_text_color"
+            android:textSize="22sp"
+            tools:ignore="ButtonStyle,HardcodedText"
             />
 </LinearLayout>
