--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activity_bgcolor"
         tools:context=".FlashCard"
         tools:ignore="ContentDescription, HardcodedText"
         >
@@ -35,86 +35,100 @@
             />
     <Button
             android:id="@+id/btn_OTT"
-            android:layout_width="36dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="75dp"
-            android:layout_marginTop="6dp"
+            android:layout_width="44dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/button_bg_border"
             android:gravity="center"
-            android:text="OTT"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="ενέσ"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/shadow_grieks"
             />
     <Button
             android:id="@+id/btn_OTTT"
             android:layout_width="44dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="6dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/button_bg_border"
             android:gravity="center"
-            android:text="OTTT"
-            app:layout_constraintStart_toEndOf="@+id/btn_OTT"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="μέλλ"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_OTT"
             />
     <Button
             android:id="@+id/btn_VVT"
             android:layout_width="44dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="6dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/button_bg_border"
             android:gravity="center"
-            android:text="VVT"
-            app:layout_constraintStart_toEndOf="@+id/btn_OTTT"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="αόρι"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_OTTT"
             />
     <Button
             android:id="@+id/btn_OVT"
             android:layout_width="44dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="6dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/button_bg_border"
             android:gravity="center"
-            android:text="OVT"
-            app:layout_constraintStart_toEndOf="@+id/btn_VVT"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="παρα"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_VVT"
             />
     <Button
             android:id="@+id/btn_GW"
             android:layout_width="44dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/button_bg_border"
+            android:layout_height="28dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_yellow_bg_border"
             android:gravity="center"
-            android:text="GW"
-            app:layout_constraintStart_toEndOf="@+id/btn_OVT"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="προσ"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_OVT"
+            />
+    <Button
+            android:id="@+id/btn_show_all"
+            android:layout_width="44dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_orange_bg_border"
+            android:gravity="center"
+            android:text="όλοι"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="@+id/shadow_grieks"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     <TextView
             android:id="@+id/shadow_grieks"
-            android:layout_width="match_parent"
-            android:layout_height="192dp"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_margin="2dp"
             android:background="@drawable/shadow"
             android:clickable="true"
             android:gravity="center_horizontal|center_vertical"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/question_mark"
             android:textAlignment="gravity"
-            android:textColor="#BBDEFB"
             android:textSize="64sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_OTT"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ibtn_flag_greek"
             />
     <TextView
             android:id="@+id/text_grieks"
-            android:layout_width="match_parent"
-            android:layout_height="192dp"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_margin="2dp"
             android:background="@drawable/background_with_border"
             android:clickable="true"
@@ -129,7 +143,7 @@
             android:textSize="20sp"
             android:textStyle="normal|italic"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_OTT"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ibtn_flag_greek"
             />
@@ -165,7 +179,7 @@
             android:id="@+id/lbl-correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
             android:text="@string/emoji_correct"
             android:textColor="?android:attr/colorPrimary"
@@ -192,7 +206,6 @@
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="@string/paperclip"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_grieks"
             app:srcCompat="@drawable/paperclip"
@@ -227,7 +240,7 @@
             android:id="@+id/lbl-wrong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
             android:text="@string/emoji_wrong"
             android:textColor="?android:attr/colorAccent"
@@ -239,40 +252,44 @@
             android:id="@+id/text_saldo"
             android:layout_width="87dp"
             android:layout_height="20dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:gravity="end|center_vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_GW"
-            app:layout_constraintTop_toTopOf="@+id/ibtn_flag_greek"
+            app:layout_constraintTop_toBottomOf="@+id/text_nederlands"
             />
     <ProgressBar
             android:id="@+id/block_progress_bar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="8dp"
             android:layout_marginBottom="4dp"
             android:alpha="1"
             android:max="100"
+            android:paddingBottom="0dp"
             android:progress="30"
             android:progressTint="@color/κυανός"
             app:layout_constraintBottom_toTopOf="@id/ibtn_flag_nl"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             />
     <TextView
             android:id="@+id/text_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:textColor="@color/κυανός"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shadow_note"
+            tools:text="goed: 0 totaal: 0 = 100%"
             />
     <ImageButton
-            android:id="@+id/btn_reveal_answer"
+            android:id="@+id/btn_reveal"
             android:layout_width="@dimen/nav_btn_width"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginStart="8dp"
@@ -284,29 +301,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
-    <ImageButton
-            android:id="@+id/btn_reveal_note"
-            android:layout_width="@dimen/nav_btn_width"
-            android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:elevation="2dp"
-            android:scaleType="centerCrop"
-            android:textAllCaps="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_reveal_answer"
-            app:srcCompat="@drawable/paperclip"
-            />
     <Button
             android:id="@+id/btn_speak"
             android:layout_width="@dimen/nav_btn_width"
             android:layout_height="@dimen/nav_btn_height"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/speak"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_prev_block"
-            app:layout_constraintStart_toEndOf="@+id/btn_reveal_note"
             />
     <Button
             android:id="@+id/btn_prev_block"
@@ -333,9 +337,9 @@
     <TextView
             android:id="@+id/lbl_jumper"
             android:layout_width="33dp"
-            android:layout_height="22dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="16dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:background="@color/colorAccent"
             android:gravity="bottom|center"
             android:text="↷"
@@ -343,8 +347,19 @@
             android:textSize="24sp"
             android:textStyle="bold"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_note"
             tools:visibility="visible"
+            />
+    <CheckBox
+            android:id="@+id/flash_chk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="Flash "
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_reveal"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
