--- a/app/src/main/res/layout/hangman.xml
+++ b/app/src/main/res/layout/hangman.xml
@@ -1,107 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activity_bgcolor"
         tools:context=".Hangman"
         >
-
     <driemondglas.nl.zorba.HangmanCanvas
             android:id="@+id/gallow"
             android:layout_width="160dp"
             android:layout_height="210dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="128dp"
             android:background="@drawable/background_with_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
             android:id="@+id/lbl_goed"
-            android:text="@string/correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/gallow"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:text="@string/correct"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gallow"
             />
     <TextView
             android:id="@+id/text_dashed"
-            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/gallow"
-            app:layout_constraintStart_toEndOf="@id/lbl_goed"
             android:layout_marginStart="8dp"
-            android:padding="4dp"
-            android:textSize="18sp"
-            android:letterSpacing="0.2"
-            android:textStyle="bold"
+            android:layout_marginTop="16dp"
             android:background="@drawable/background_with_border"
+            android:letterSpacing="0.2"
+            android:padding="4dp"
+            android:text=""
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/lbl_goed"
+            app:layout_constraintTop_toBottomOf="@+id/gallow"
             />
     <TextView
-            android:text="@string/error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_dashed"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:text="@string/error"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_dashed"
             />
     <TextView
             android:id="@+id/text_faulty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_dashed"
-            android:textSize="18sp"
-            android:letterSpacing="0.2"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/lbl_goed"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:letterSpacing="0.2"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/lbl_goed"
+            app:layout_constraintTop_toBottomOf="@+id/text_dashed"
             />
     <HorizontalScrollView
             android:id="@+id/key_scroller"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_faulty"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="40dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_faulty"
             >
-        <include layout="@layout/greek_alphabet"/>
+        <include layout="@layout/greek_alphabet" />
     </HorizontalScrollView>
 
     <TextView
             android:id="@+id/text_nl"
-            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/key_scroller"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/key_scroller"
             />
     <Button
-            android:text="@string/again"
-            android:textAllCaps="false"
+            android:id="@+id/btn_again"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/again"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="8dp"
-            android:onClick="again"
-            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
