--- a/app/src/main/res/layout/lemma_recycler_item.xml
+++ b/app/src/main/res/layout/lemma_recycler_item.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_background"
         android:paddingStart="4dp"
         >
+    <TextView
+            android:id="@+id/lbl_flashed"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/κυανός"
+            android:gravity="bottom|center"
+            android:text="@string/flash"
+            android:textColor="@android:color/holo_purple"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
     <TextView
             android:id="@+id/lemma_gr"
             android:layout_width="0dp"
@@ -17,20 +32,7 @@
             android:textColor="@color/blue_text_color"
             android:textSize="20sp"
             android:textStyle="normal|italic"
-            app:layout_constraintEnd_toStartOf="@+id/speaker"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-    <TextView
-            android:id="@+id/speaker"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:text="@string/speak"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
@@ -42,7 +44,6 @@
             android:paddingBottom="4dp"
             android:textColor="@color/normal_text_color"
             android:textSize="15sp"
-            app:layout_constraintEnd_toStartOf="@id/speaker"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lemma_gr"
             />
