--- a/app/src/main/res/layout/luisterlijst.xml
+++ b/app/src/main/res/layout/luisterlijst.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -103,23 +104,27 @@
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/sb_speed"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             />
     <ImageView
             android:id="@+id/img_thatsall"
-            android:layout_width="126dp"
-            android:layout_height="58dp"
+            android:layout_width="252dp"
+            android:layout_height="116dp"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/background_with_border"
             android:contentDescription="@string/thatsall"
+            android:elevation="4dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/sb_speed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/farfarAway"
             app:srcCompat="@drawable/thatsall"
             />
     <TextView
-            android:id="@+id/dummy_btn"
             android:layout_width="74dp"
             android:layout_height="76dp"
             android:layout_marginStart="2dp"
