--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="borderBackground">#DCFDFF</color>
+    <color name="borderBackground">#E0F2F1</color>
     <color name="border_color">#673AB7</color>
 
     <color name="label_bgcolor">#B8A1E1</color>
@@ -15,10 +15,9 @@
     <!-- Wikipedia Flag of Greece -->
     <color name="κυανός">#004C98</color>
 
-    <color name="activity_bgcolor">#C5E1A5</color>
+    <color name="activity_bgcolor">#C8E6C9</color>
     <color name="listitem_bgcolor">#E3F2FD</color>
     <color name="listitem_border_color">#B4B4B4</color>
-    <color name="table_about_bg">#FFF59D</color>
     <color name="normal_text_color">#555555</color>
     <color name="blue_text_color">@color/κυανός</color>
 
