--- a/app/src/main/res/layout/theme_wordtype.xml
+++ b/app/src/main/res/layout/theme_wordtype.xml
@@ -7,10 +7,10 @@
             android:id="@+id/lbl_wordgroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/lst_wordgroup"
+            app:layout_constraintEnd_toEndOf="@id/lst_theme"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/wordgroup"
+            android:text="@string/theme"
             android:textAlignment="center"
             />
     <TextView
@@ -24,7 +24,7 @@
             android:textAlignment="center"
             />
     <ListView
-            android:id="@+id/lst_wordgroup"
+            android:id="@+id/lst_theme"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHorizontal_bias="0.5"
@@ -43,7 +43,7 @@
             android:layout_height="0dp"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toBottomOf="@id/lbl_wordtype"
-            app:layout_constraintStart_toEndOf="@+id/lst_wordgroup"
+            app:layout_constraintStart_toEndOf="@+id/lst_theme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_select"
             android:layout_marginStart="8dp"
