--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -80,15 +80,18 @@
             android:id="@+id/txt_conjugations"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/tinos_italic"
             android:text=""
             android:textColor="@color/blue_text_color"
             android:textSize="20sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txt_persons"
             app:layout_constraintTop_toBottomOf="@+id/txt_reveal"
+            tools:text="vervoegingen"
             />
     <View
             android:id="@+id/divider5"
@@ -203,6 +206,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:checked="true"
+            android:onClick="onTenseClick"
             android:text="Ενεστώτας"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_tijdsvorm"
@@ -213,6 +217,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:checked="true"
+            android:onClick="onTenseClick"
             android:text="Μέλλοντας"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chk_enestotas"
@@ -223,6 +228,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:checked="true"
+            android:onClick="onTenseClick"
             android:text="Αόριστος"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chk_mellontas"
@@ -233,6 +239,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:checked="true"
+            android:onClick="onTenseClick"
             android:text="Παρατατικός"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chk_aoristos"
@@ -242,6 +249,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:onClick="onTenseClick"
             android:text="Προστακτική"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chk_paratatikos"
@@ -470,12 +478,27 @@
             android:id="@+id/lbl_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginBottom="8dp"
             android:gravity="start"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/divider5"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="aantal"
+            />
+    <TextView
+            android:id="@+id/txt_persons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/tinos_italic"
+            android:gravity="end"
+            android:text="TextView"
+            android:textSize="20sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_reveal"
             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
